updated package.json to use new directory names for build and copy scripts

--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "start:dev": "ENV=dev node server.js",
     "start:devhosted": "ENV=devhosted node server.js",
     "start:prod": "ENV=prod node server.js",
-    "build-spa:dev": "cd ../saasmaster && npm run build:dev",
-    "build-spa:prod": "cd ../saasmaster && npm run build:prod",
-    "copy": "cp -r ../saasmaster/build/* build",
+    "build-spa:dev": "cd ../snapmaster && npm run build:dev",
+    "build-spa:prod": "cd ../snapmaster && npm run build:prod",
+    "copy": "cp -r ../snapmaster/build/* build",
     "build:dev": "PROJ=saasmaster SVC=saasmaster-api scripts/build.sh",
     "build:prod": "cp Dockerfile-prod Dockerfile; PROJ=saasmaster-prod SVC=saasmaster scripts/build.sh; cp Dockerfile-dev Dockerfile",
     "deploy:dev": "PROJ=saasmaster SVC=saasmaster-api scripts/deploy.sh",
