updated environment and setup scripts to new snapmaster GCP accounts

--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "build-spa:dev": "cd ../snapmaster && npm run build:dev",
     "build-spa:prod": "cd ../snapmaster && npm run build:prod",
     "copy": "cp -r ../snapmaster/build/* build",
-    "build:dev": "PROJ=saasmaster SVC=saasmaster-api scripts/build.sh",
-    "build:prod": "cp Dockerfile-prod Dockerfile; PROJ=saasmaster-prod SVC=saasmaster scripts/build.sh; cp Dockerfile-dev Dockerfile",
-    "deploy:dev": "PROJ=saasmaster SVC=saasmaster-api scripts/deploy.sh",
-    "deploy:prod": "PROJ=saasmaster-prod SVC=saasmaster scripts/deploy.sh",
-    "activate:dev": "CONFIGURATION=saasmaster-dev scripts/activate.sh",
-    "activate:prod": "CONFIGURATION=saasmaster-prod scripts/activate.sh",
+    "build:dev": "PROJ=snapmaster-dev SVC=snapmaster-dev scripts/build.sh",
+    "build:prod": "cp Dockerfile-prod Dockerfile; PROJ=snapmaster SVC=snapmaster scripts/build.sh; cp Dockerfile-dev Dockerfile",
+    "deploy:dev": "PROJ=snapmaster-dev SVC=snapmaster-dev scripts/deploy.sh",
+    "deploy:prod": "PROJ=snapmaster SVC=snapmaster scripts/deploy.sh",
+    "activate:dev": "CONFIGURATION=snapmaster-dev scripts/activate.sh",
+    "activate:prod": "CONFIGURATION=snapmaster-prod scripts/activate.sh",
     "push:dev": "npm run activate:dev && npm run build-spa:dev && npm run copy && npm run build:dev && npm run deploy:dev",
     "push:prod": "npm run activate:prod && npm run build-spa:prod && npm run copy && npm run build:prod && npm run deploy:prod",
     "test": "echo \"Error: no test specified\" && exit 1"
