--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
       "request": "launch",
       "name": "Create snap",
       "program": "${workspaceFolder}/utils/createSnap.js",
-      "args": ["github-gcpbuild-slack", "snaps/github-gcpbuild-slack.yml"],
+      "args": ["snaps/github-gcpbuild-slack.yml"],
       "env": {"ENV":"dev"}
     },
 
