--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "jwks-rsa": "^1.6.0",
     "oauth-signature": "^1.5.0",
     "twilio": "^3.39.2",
-    "twitter": "^1.7.1"
+    "twitter": "^1.7.1",
+    "yaml": "^1.7.2"
   }
 }
