--- a/snaps/github-gcpbuild-slack.yml
+++ b/snaps/github-gcpbuild-slack.yml
@@ -3,16 +3,18 @@ version: snap-v1alpha1
 name: github-gcpbuild-slack
 description: GitHub merge -> Google Cloud build / Slack
 tools:
-  - github
-  - gcpbuild
-  - slack
+  trigger:
+    github
+  actions:
+    - gcpbuild
+    - slack
 parameters: 
   repo: 
     description: name of git repository
   branch:
     description: name of branch
   channel: 
-    Description: name of slack channel
+    description: name of slack channel
 trigger: 
   name: github/merge
   parameters:
