--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@google-cloud/language": "^3.6.2",
     "@google-cloud/pubsub": "^1.1.5",
     "@google-cloud/scheduler": "^1.3.3",
+    "@octokit/rest": "^17.0.0",
     "@sendgrid/mail": "^6.5.0",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
@@ -40,6 +41,8 @@
     "express-jwt": "^5.3.1",
     "express-jwt-authz": "^2.3.1",
     "facebook-nodejs-business-sdk": "^5.0.1",
+    "github-app": "^4.0.1",
+    "github-webhook-handler": "^1.0.0",
     "google-auth-library": "^5.5.1",
     "jwks-rsa": "^1.6.0",
     "oauth-signature": "^1.5.0",
