--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@google-cloud/pubsub": "^1.1.5",
     "@google-cloud/scheduler": "^1.3.3",
     "@octokit/rest": "^17.0.0",
+    "@octokit/webhooks": "^7.1.0",
     "@sendgrid/mail": "^6.5.0",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
