--- a/snaps/github-gcpbuild-slack.yml
+++ b/snaps/github-gcpbuild-slack.yml
@@ -18,7 +18,7 @@ config:
     provider: github
     event: push
     repo: $repo
-    branch: master
+    branch: $branch
   - name: gcp-build
     provider: gcp
     action: build
