--- a/snaps/github-twilio.yml
+++ b/snaps/github-twilio.yml
@@ -8,6 +8,8 @@ actions:
 parameters: 
   - name: repo
     description: name of git repository
+  - name: from
+    description: phone number to send SMS from
   - name: to
     description: phone number to send SMS to
 config:
@@ -18,5 +20,6 @@ config:
   - name: twilio-message
     provider: twilio
     action: send
+    from: $from
     to: $to
     message: received push on $repo
