--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "express-jwt-authz": "^2.3.1",
     "facebook-nodejs-business-sdk": "^5.0.1",
     "google-auth-library": "^5.5.1",
+    "jsonpath-plus": "^3.0.0",
     "jwks-rsa": "^1.6.0",
     "oauth-signature": "^1.5.0",
     "twilio": "^3.39.2",
