--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "jsonpath-plus": "^3.0.0",
     "jwks-rsa": "^1.6.0",
     "oauth-signature": "^1.5.0",
+    "shelljs": "^0.8.3",
     "twilio": "^3.39.2",
     "twitter": "^1.7.1",
     "yaml": "^1.7.2"
