updated Dockerfiles to use GCP+node image, updated GCP provider

--- a/src/providers/gcp/gcp.yml
+++ b/src/providers/gcp/gcp.yml
@@ -28,3 +28,6 @@ actions:
     - name: service
       description: service name
       required: true
+    - name: region
+      description: region to deploy into
+      required: true
