--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@octokit/webhooks": "^7.1.0",
     "@sendgrid/mail": "^6.5.0",
     "axios": "^0.19.0",
+    "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "eventsource": "^1.0.7",
