first implementation of out-of-tree GCP action handling

--- a/Dockerfile-prod
+++ b/Dockerfile-prod
@@ -1,7 +1,6 @@
 # Use the official lightweight Node.js 12 image.
 # https://hub.docker.com/_/node
-#FROM node:12-slim
-FROM ogazitt/gcloud-node-image
+FROM node:12-slim
 
 # Create and change to the app directory.
 WORKDIR /usr/src/app
@@ -18,4 +17,4 @@ RUN npm install --only=production
 COPY . ./
 
 # Run the web service on container startup.
-CMD [ "npm", "run", "start:prod" ]
+CMD [ "node", "./server.js"]
