refactored create/deleteTrigger to have connInfo passed in; eliminated ping github event propagation

--- a/snaps/docker-slack.yml
+++ b/snaps/docker-slack.yml
@@ -19,4 +19,4 @@ config:
     provider: slack
     action: send
     channel: $channel
-    message: received push on $repo
+    message: new image pushed into $repo in dockerhub
