updated gcp provider to use auth library and projects api

--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "express-jwt": "^5.3.1",
     "express-jwt-authz": "^2.3.1",
     "facebook-nodejs-business-sdk": "^5.0.1",
-    "google-auth-library": "^5.5.1",
+    "google-auth-library": "^5.10.1",
+    "googleapis": "^48.0.0",
     "jsonpath-plus": "^3.0.0",
     "jwks-rsa": "^1.6.0",
     "oauth-signature": "^1.5.0",
