entities service implementation, and hooked up GCP provider to surface gcp:projects as an entity

--- a/snaps/docker-gcp-copy-deploy-slack.yml
+++ b/snaps/docker-gcp-copy-deploy-slack.yml
@@ -12,6 +12,7 @@ parameters:
     description: name of docker repository
   - name: project
     description: name of GCP project
+    entity: gcp:projects
   - name: image
     description: name of GCR image
   - name: service
