--- a/src/providers/docker/docker.yml
+++ b/src/providers/docker/docker.yml
@@ -9,6 +9,7 @@ connection:
     description: user name
   - name: password
     description: triggers require password (not a personal access token)
+    password: true
 triggers: 
   - name: push
     description: push event into a repository
