added support for docker account as the core entity for docker provider

--- a/src/providers/docker/docker.yml
+++ b/src/providers/docker/docker.yml
@@ -4,6 +4,7 @@ name: docker
 description: Docker Provider Definition
 connection: 
   type: simple
+  entity: docker:accounts
   connectionInfo:
   - name: username
     description: user name
