revamped providers to make use of account entities, and made connection logic add/remove these entities

--- a/src/providers/docker/docker.yml
+++ b/src/providers/docker/docker.yml
@@ -15,6 +15,10 @@ triggers:
   - name: push
     description: push event into a repository
     parameters:
+    - name: account
+      description: account name
+      entity: docker:accounts
+      required: true 
     - name: repo
       description: name of docker repository
       required: true 
