--- a/src/providers/github/github.yml
+++ b/src/providers/github/github.yml
@@ -4,6 +4,7 @@ name: github
 description: GitHub Provider Definition
 connection: 
   type: oauth
+  entity: github:repos
 triggers: 
   - name: push
     description: push event into a repository
