--- a/snaps/docker-gcr-copyimage-slack.yml
+++ b/snaps/docker-gcr-copyimage-slack.yml
@@ -19,6 +19,7 @@ parameters:
 config:
   - name: docker-push
     provider: docker
+    account: docker:accounts:default
     event: push
     repo: $repo
   - name: gcr-copy
@@ -29,6 +30,7 @@ config:
     image: $image
   - name: slack-message
     provider: slack
+    workspace: slack:workspaces:default
     action: send
     channel: $channel
     message: dockerhub image $repo copied to gcr.io/$project/$image
