--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "jwks-rsa": "^1.6.0",
     "oauth-signature": "^1.5.0",
     "shelljs": "^0.8.3",
+    "swagger-jsdoc": "^4.0.0",
+    "swagger-ui-express": "^4.1.4",
     "twilio": "^3.39.2",
     "twitter": "^1.7.1",
     "workerpool": "^5.0.4",
