--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@google-cloud/language": "^3.6.2",
     "@google-cloud/pubsub": "^1.1.5",
     "@google-cloud/scheduler": "^1.3.3",
+    "@google-cloud/secret-manager": "^3.0.0",
     "@octokit/rest": "^17.0.0",
     "@octokit/webhooks": "^7.1.0",
     "@sendgrid/mail": "^6.5.0",
