removing all snapmaster config secrets from any built artifacts, and severing firestore dependence on a config file on disk

--- a/.dockerignore
+++ b/.dockerignore
@@ -2,3 +2,5 @@ Dockerfile
 README.md
 node_modules
 npm-debug.log
+# all config is now injected through secrets as opposed to config files on the filesystem
+config/
