--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
     "jsonpath-plus": "^3.0.0",
     "jwks-rsa": "^1.6.0",
     "oauth-signature": "^1.5.0",
+    "querystring": "^0.2.0",
     "shelljs": "^0.8.3",
+    "simple-oauth2": "^3.4.0",
     "swagger-jsdoc": "^4.0.0",
     "swagger-ui-express": "^4.1.4",
     "twilio": "^3.39.2",
