--- a/src/providers/azure/azure.yml
+++ b/src/providers/azure/azure.yml
@@ -3,7 +3,7 @@ version: provider-v1alpha1
 name: azure
 description: Azure Provider Definition
 connection: 
-  type: simple
+  type: disabled
   connectionInfo:
   - name: access ID
   - name: secret key
