--- a/src/providers/pagerduty/pagerduty.yml
+++ b/src/providers/pagerduty/pagerduty.yml
@@ -3,9 +3,52 @@ version: provider-v1alpha1
 name: pagerduty
 description: Pagerduty Provider Definition
 connection: 
-  type: disabled
+  type: oauth
+  entity: pagerduty:services
   connectionInfo:
-  - name: token
-    description: personal access token
+  - name: service
+    description: service name
 triggers: 
+  - name: incident.trigger
+    description: new incident triggered
+    parameters:
+    - name: service
+      description: name of pagerduty service
+      entity: pagerduty:services
+      required: true
+  - name: incident.acknowledge
+    description: incident acknowledged
+    parameters:
+    - name: service
+      description: name of pagerduty service
+      entity: pagerduty:services
+      required: true
+  - name: incident.resolve
+    description: incident resolved
+    parameters:
+    - name: service
+      description: name of pagerduty service
+      entity: pagerduty:services
+      required: true
+  - name: incident.assign
+    description: incident assigned
+    parameters:
+    - name: service
+      description: name of pagerduty service
+      entity: pagerduty:services
+      required: true
+  - name: incident.escalate
+    description: incident escalated
+    parameters:
+    - name: service
+      description: name of pagerduty service
+      entity: pagerduty:services
+      required: true
+  - name: incident.delegate
+    description: incident delegated
+    parameters:
+    - name: service
+      description: name of pagerduty service
+      entity: pagerduty:services
+      required: true
 actions:
